--- a/src/main/view/src/components/report/organisms/itemBoard.css
+++ b/src/main/view/src/components/report/organisms/itemBoard.css
@@ -1,10 +1,49 @@
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.flexlayout__tab_toolbar button {
+  border: 0;
+  background: 0;
+  cursor: pointer;
+  font-weight: 400;
+  line-height: 12px;
+  min-width: 20px;
+}
 div.flexlayout__tabset_tabbar_outer {
   background: 0;
   border: 0;
 }
-
+div.flexlayout__tabset_tabbar_inner_tab_container {
+  position: static;
+  flex-grow: 1;
+}
 div.flexlayout__tab_button--selected {
-  background: 0;
-  cursor: move;
+  background: 0 !important;
   width: 95%;
+}
+.flexlayout__drag_rect {
+  background: #fff !important;
+  box-shadow: none !important;
+  border: 1px dashed #999;
+  font-size: 12px !important;
+  border-radius: 0 !important;
+}
+.flexlayout__outline_rect {
+  background: rgb(154 221 255 / 15%);
+  border: 2px dashed #9addff;
+  box-shadow: none !important;
+}
+.flexlayout__outline_rect_edge {
+  background: rgb(154 221 255 / 40%);
+  border: 2px solid #9addff;
+  box-shadow: none !important;
+}
+
+.flexlayout__splitter {
+  background: white;
 }
