feat: Alert Modal 추가, Modal 내부 구조 수정, 일부 데이터 원본 선택 컴포넌트 추가
Modal 내부 구조 수정 내역
- Modal 위에 Modal 띄울 때 애니메이션 적용되지 않던 오류 수정
- onSubmit에서 true 반환시 자동으로 팝업 닫히지 않게 수정
- Modal localization 적용

--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -34,6 +34,10 @@ a {
   color: #61dafb;
 }
 
+.dx-texteditor.dx-state-readonly {
+  border-style: solid;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
