feat/popover&ribbonfix
불필요 파일 삭제

중복된 이미지 삭제

테스트용 이미지 추가.(나중에 삭제 예정)

popover 관련 css 추가

--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -46,3 +46,12 @@ a {
     transform: rotate(360deg);
   }
 }
+
+#Popover {
+  z-index: 100;
+  padding: 0;
+}
+
+#subMenu {
+  padding-left: 15px;
+}
