사용자 정의 데이터 UI V1.0.0
사용자 정의 데이터
- 내부 STATE 및 화면 설계 완료

--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -1,7 +1,13 @@
 a {
   text-decoration: none;
 }
-
+.custom-cursor-column {
+    cursor: pointer;
+    -webkit-user-select: none !important; 
+    -moz-user-select: -moz-none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+}
 .App {
   text-align: center;
   width: 100vw;
