일반그리드 옵션
일반그리드 옵션
페이징, 머지, 그리드라인, 해더 유뮤, 자동너비 맞춤 추가

--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -2,6 +2,10 @@ a {
   text-decoration: none;
 }
 
+.dx-freespace-row {  
+  height: 0px !important;  
+}  
+
 .App {
   text-align: center;
   width: 100vw;
