--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -19,6 +19,19 @@ a {
   }
 }
 
+img {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
