--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -7,6 +7,15 @@ a {
   height: 100vh;
 }
 
+*{
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
