--- a/src/main/view/src/index.css
+++ b/src/main/view/src/index.css
@@ -1,3 +1,14 @@
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 100;src: url(assets/font/NotoSansKR-Thin.ttf) format('truetype');}
+
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 300;src: url(assets/font/NotoSansKR-Light.ttf) format('truetype');}
+
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 400;src: url(assets/font/NotoSansKR-Regular.ttf) format('truetype');}
+
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 500;src: url(assets/font/NotoSansKR-Medium.ttf) format('truetype');}
+
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 700;src: url(assets/font/NotoSansKR-Bold.ttf) format('truetype');}
+
+@font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 900;src: url(assets/font/NotoSansKR-Black.ttf) format('truetype');}
 
 body {
   margin: 0;
