--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -88,3 +88,11 @@ img {
   margin-top: 0px;
   margin-right: 0px;
 }
+
+.dx-drawer:not(.dx-drawer-opened) .section:first-child {
+  margin-left: 0px;
+}
+
+.dx-drawer.dx-drawer-opened .section:first-child {
+  margin-left: 10px !important;
+}
