--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -57,10 +57,6 @@ img {
   color: #61dafb;
 }
 
-.dx-texteditor.dx-state-readonly {
-  border-style: solid;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -76,7 +72,7 @@ img {
 }
 
 #subMenu {
-  padding-left: 15px;
+  margin-left: 8px !important;
 }
 
 .section {
@@ -93,7 +89,7 @@ img {
   margin-left: 0px;
 }
 
-.dx-drawer.dx-drawer-opened .board:first-child {
+.dx-drawer.dx-drawer-opened div:not(.dx-state-invisible) .board:first-child {
   margin-left: 10px !important;
 }
 
