feat: 로그인 엔터 이벤트 추가, ItemBoard 아이템 영역 외 흰색 부분 제거

--- a/src/main/view/src/components/report/atomic/ItemBoard/organisms/itemBoard.css
+++ b/src/main/view/src/components/report/atomic/ItemBoard/organisms/itemBoard.css
@@ -50,7 +50,7 @@ div.flexlayout__tab_button--selected {
 }
 
 .flexlayout__splitter {
-  background: white;
+  background: none;
 }
 
 .flexlayout__layout {
