--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -184,3 +184,30 @@ img {
 .requireRule {
   color: red;
 }
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  margin-left: 20px;
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 2px 0px;
+  text-overflow: ellipsis;
+
+  /* Position the tooltip */
+  position: fixed;
+  z-index: 1;
+
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
