--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -185,7 +185,8 @@ img {
   color: red;
 }
 
-/* TODO: 툴팁관련 공용컴포넌트 있으면 알려주세요.*/
+/* TODO: 툴팁관련 공용컴포넌트 있으면 알려주세요.
+*/
 .ct-tooltip {
   position: relative;
   display: inline-block;
