feat: 피벗 remoteOperation 적용
- 사용자 정의 데이터 미적용 상태
- 초기 상태 옵션 미적용 상태

--- a/src/main/view/src/dx.css
+++ b/src/main/view/src/dx.css
@@ -92,10 +92,14 @@
 }
 
 .dx-pager .dx-page-sizes .dx-selection, .dx-pager .dx-pages .dx-selection {
-  padding: 0px;
   background-color: transparent;
   border: 1px solid var(--primary);
   color: var(--primary);
+  line-height: 12px;
+}
+
+.dx-pager .dx-pages .dx-page {
+  padding: 7px 0px 9px 0px;
 }
 
 /* 달력 */
