--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -175,6 +175,15 @@ img {
   transition: background-color 0.3s ease;
 }
 
+.custom-scrollbar-container::-webkit-scrollbar {
+  display: none;
+}
+
+.custom-scrollbar-container {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .custom-scrollbar::-webkit-scrollbar-thumb:active {
   background-color: #b0b0b8;
 }
