--- a/src/main/view/src/dx.css
+++ b/src/main/view/src/dx.css
@@ -380,3 +380,40 @@ td[role="columnheader"] {
   margin: 10px 0px;
   padding: 20px 20px;
 }
+
+.dx-treeview-toggle-item-visibility {
+  color: var(--gray600);
+}
+.dx-treeview-item-content {
+  transform: none !important;
+}
+
+.dx-treeview-toggle-item-visibility::before,
+.dx-treeview-toggle-item-visibility.dx-treeview-toggle-item-visibility-opened::before {
+  content: '';
+  height: 22px;
+  background: url(assets/image/icon/dataSource/other_menu.png) no-repeat;
+  transform: rotate(270deg);
+  background-position: center;
+  margin-left: -12px;
+}
+
+.dx-treeview-toggle-item-visibility.dx-treeview-toggle-item-visibility-opened::before {
+  transform: rotate(0deg);
+}
+
+.dx-treeview-item-without-checkbox.dx-state-focused > .dx-treeview-item {
+  background: var(--gray100);
+  color: var(--primary);
+}
+
+.dx-treeview-item-without-checkbox.dx-state-selected > .dx-treeview-item {
+  color: var(--primary);
+  background-color: var(--gray100);
+}
+
+.wise-modal .dx-treeview-with-search > .dx-scrollable {
+  border: 1px solid var(--gray200);
+  padding:5px;
+  border-radius: 8px;
+}
