hotfix/리포트 명 변경 기능 누락 코드 작성 / 피벗그리드 font-weight 변경
hotfix/리포트 명 변경 기능 누락 코드 작성 / 피벗그리드 font-weight 변경

--- a/src/main/view/src/dx.css
+++ b/src/main/view/src/dx.css
@@ -304,6 +304,7 @@ color: var(--gray600);
 .dx-pivotgrid, .dx-datagrid {
   font-size: 13px;
   font-family: 'Noto Sans KR';
+  font-weight: bold;
 }
 
 .dx-pivotgrid thead, .dx-datagrid-headers {
@@ -325,6 +326,14 @@ color: var(--gray600);
 }
 
 .dx-pivotgrid .dx-grandtotal {
+  background: var(--gray50);
+}
+
+.dx-pivotgrid .dx-total {
+  background: var(--gray50);
+}
+
+.dx-pivotgrid .dx-pivotgrid-border .dx-area-description-cell {
   background: var(--gray50);
 }
 
