feat: 보고서 요청자 추가

--- a/src/main/view/src/dx.css
+++ b/src/main/view/src/dx.css
@@ -430,3 +430,7 @@ td[role="columnheader"] {
 .dx-treeview-node-container {
   overflow: visible;
 }
+
+.dx-item.dx-treeview-item {
+  width: 100%;
+}
