--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -108,6 +108,10 @@ img {
   overflow: visible !important;
 }
 
+.dx-form-group {
+  padding: 20px 0 20px 0
+}
+
 .szh-menu__item {
   content: '>';
   width: 80px;
