feat: 로그 조회 추가

--- a/src/main/view/src/dx.css
+++ b/src/main/view/src/dx.css
@@ -430,3 +430,7 @@ td[role="columnheader"] {
 .dx-treeview-node-container:hover {
   overflow: visible;
 }
+
+.dx-datagrid-rowsview .dx-selection.dx-row:not(.dx-row-focused) > td, .dx-datagrid-rowsview .dx-selection.dx-row:not(.dx-row-focused) > tr > td, .dx-datagrid-rowsview .dx-selection.dx-row:not(.dx-row-focused):hover > td, .dx-datagrid-rowsview .dx-selection.dx-row:not(.dx-row-focused):hover > tr > td {
+  background-color: #EEF5FF;
+}
