hotfix: user Drag 가능하도록 수정

--- a/src/main/view/src/App.css
+++ b/src/main/view/src/App.css
@@ -16,7 +16,7 @@ a {
   -moz-user-select: none;
   -ms-user-select: none;
   -o-user-select: none;
-  user-select: none;
+  user-select: text;
 }
 
 .App-logo {
