hotfix/pivot&spreadbind
피벗그리드 collapse 개선
스프레드시트 바인딩 테스트

--- a/src/main/view/src/dx.css
+++ b/src/main/view/src/dx.css
@@ -337,6 +337,12 @@ color: var(--gray600);
   background: var(--gray50);
 }
 
+.dx-pivotgrid .dx-pivotgrid-border .dx-area-data-cell,
+.dx-pivotgrid .dx-pivotgrid-border .dx-area-row-cell {
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+}
+
 td[role="columnheader"] {
   text-align: center !important;
 }
