--- a/src/main/view/src/dx.css
+++ b/src/main/view/src/dx.css
@@ -1,5 +1,6 @@
 *{
   --primary: #005196;
+  --primary2:  #3679DA;
   --primaryHover: #00437A;
   --primaryActive: #003561;
   --primaryDisable: #80A8CB;
