--- a/src/main/view/src/components/report/atomic/spreadBoard/organisms/spreadBoard.css
+++ b/src/main/view/src/components/report/atomic/spreadBoard/organisms/spreadBoard.css
@@ -1,45 +1,64 @@
 .ribbon-button-new-report {
-	background-image: url(assets/image/icon/button/newFileIcon.png);
-   
-    background-size: 20px !important;
+  background-image: url(assets/image/icon/button/newFileIcon.png);
+  background-size: 24px !important;
 }
 
-.ribbon-button-open-report-local{
-	background-image: url(assets/image/icon/button/loadFile.png);
-    background-size: 30px !important;
+.ribbon-button-open-report-local {
+  background-image: url(assets/image/icon/button/loadFile.png);
+  background-size: 24px !important;
 }
 
-.ribbon-button-open-report{
-	background-image: url(assets/image/icon/button/loadFileServer.png);
-    background-size: 32px !important;
+.ribbon-button-open-report {
+  background-image: url(assets/image/icon/button/loadFileServer.png);
+  background-size: 24px !important;
 }
 
-.ribbon-button-save-report{
-	background-image: url(assets/image/icon/button/saveIcon.png);
-    background-size: 26px !important;
+.ribbon-button-load-dataset {
+  background-image: url(assets/image/icon/button/loadDataset.png);
+  background-size: 24px !important;
 }
 
-.ribbon-button-save-as-report{
-	background-image: url(assets/image/icon/button/saveAsIcon.png);
-    background-size: 26px !important;
+.ribbon-button-save-report {
+  background-image: url(assets/image/icon/button/saveIcon.png);
+  background-size: 24px !important;
 }
 
-.ribbon-button-delete-report{
-	background-image: url(assets/image/icon/button/removeIcon.png);
-    background-size: 26px !important;
+.ribbon-button-save-as-report {
+  background-image: url(assets/image/icon/button/saveAsIcon.png);
+  background-size: 24px !important;
 }
 
-.ribbon-button-download-report{
-	background-image: url(assets/image/icon/button/downloadIcon.png);
-    background-size: 26px !important;
+.ribbon-button-delete-report {
+  background-image: url(assets/image/icon/button/removeIcon.png);
+  background-size: 24px !important;
 }
 
-.ribbon-button-dataset{
-	background-image: url(assets/image/icon/button/dataset2sheet.png);
-    background-size: 30px !important;
+.ribbon-button-download-report {
+  background-image: url(assets/image/icon/button/downloadIcon.png);
+  background-size: 24px !important;
+
 }
 
-.ribbon-button-print{
-	background-image: url(assets/image/icon/button/icon_print.png);
-    background-size: 32px !important;
+.ribbon-button-dataset {
+  background-image: url(assets/image/icon/button/dataset2sheet.png);
+  background-size: 24px !important;
+}
+
+.ribbon-button-print {
+  background-image: url(assets/image/icon/button/icon_print.png);
+  background-size: 24px !important;
+}
+
+.gc-ribbon-bar .ribbon-panel .ribbon-panel-item {
+  border-left: none !important;
+  border-right: none !important;
+}
+
+.gc-ribbon-bar .ribbon-navigation .ribbon-navigation-item.ribbon-navigation-item-active {
+  border: none !important;
+  border-bottom: solid 3px var(--primary) !important;
+}
+
+.gc-ribbon-bar .ribbon-navigation .ribbon-navigation-item.ribbon-navigation-item-active a {
+  color: var(--primary) !important;
 }
