fix: portal css 오류 수정

--- a/src/main/view/src/portal/css/reset.css
+++ b/src/main/view/src/portal/css/reset.css
@@ -24,87 +24,87 @@
 	box-sizing: border-box;
 }
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-enter,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+.portal html,
+.portal body,
+.portal div,
+.portal span,
+.portal applet,
+.portal object,
+.portal iframe,
+.portal h1,
+.portal h2,
+.portal h3,
+.portal h4,
+.portal h5,
+.portal h6,
+.portal p,
+.portal blockquote,
+.portal pre,
+.portal a,
+.portal abbr,
+.portal acronym,
+.portal address,
+.portal big,
+.portal cite,
+.portal code,
+.portal del,
+.portal dfn,
+.portal em,
+.portal img,
+.portal ins,
+.portal kbd,
+.portal q,
+.portal s,
+.portal samp,
+.portal small,
+.portal strike,
+.portal strong,
+.portal sub,
+.portal sup,
+.portal tt,
+.portal var,
+.portal b,
+.portal u,
+.portal i,
+.portal enter,
+.portal dl,
+.portal dt,
+.portal dd,
+.portal ol,
+.portal ul,
+.portal li,
+.portal fieldset,
+.portal form,
+.portal label,
+.portal legend,
+.portal table,
+.portal caption,
+.portal tbody,
+.portal tfoot,
+.portal thead,
+.portal tr,
+.portal th,
+.portal td,
+.portal article,
+.portal aside,
+.portal canvas,
+.portal details,
+.portal embed,
+.portal figure,
+.portal figcaption,
+.portal footer,
+.portal header,
+.portal hgroup,
+.portal menu,
+.portal nav,
+.portal output,
+.portal ruby,
+.portal section,
+.portal summary,
+.portal time,
+.portal mark,
+.portal audio,
+.portal video {
 	font-family: 'NanumGothic';
 
 	margin: 0;
@@ -115,42 +115,42 @@ video {
 	vertical-align: baseline;
 }
 
-html,
-body {
+.portal html,
+.portal body {
 	width: 100%;
 	height: 100%;
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+.portal article,
+.portal aside,
+.portal details,
+.portal figcaption,
+.portal figure,
+.portal footer,
+.portal header,
+.portal hgroup,
+.portal menu,
+.portal nav,
+.portal section {
 	display: block;
 }
 
-a {
+.portal a {
 	color: inherit;
 	text-decoration: none;
 }
 
-img {
+.portal img {
 	vertical-align: top;
 }
 
-ul,
-ol,
-li {
+.portal ul,
+.portal ol,
+.portal li {
 	list-style: none;
 }
 
-button {
+.portal button {
 	border: none;
 	background: transparent;
 	font-family: inherit;
@@ -159,20 +159,20 @@ button {
 	cursor: pointer;
 }
 
-button:active {
+.portal button:active {
 	outline: none;
 }
 
-button:focus {
+.portal button:focus {
 	outline: none;
 }
 
-table {
+.portal table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
 
-hr {
+.portal hr {
 	border: none;
 }
 
