--- a/src/main/view/public/index.html
+++ b/src/main/view/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Wise Intelligence V7</title>
+    <title>HOME & SHOPPING OLAP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
