--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -393,3 +393,12 @@ body {
   justify-content: center;
   font-size: 18px;
 }
+
+#portal_user_info {
+  position: absolute;
+  right: 30px;
+}
+
+#portal_user_info img {
+  display: none;
+}
