--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -14,6 +14,10 @@ body {
   min-width: 1820px;
 }
 
+iframe {
+  border: none;
+}
+
 .portal .header_wrap {
   display: flex;
   align-items: center;
