--- a/src/main/view/src/portal/components/Drawer.css
+++ b/src/main/view/src/portal/components/Drawer.css
@@ -1,4 +1,4 @@
-.portal .drawer {
+.portal-drawer .drawer {
   position: fixed;
   right: -20px;
   top: 0;
@@ -6,30 +6,33 @@
   height: 100%;
   background-color: white;
   transform: translateX(100%);
-  border-left: 1px solid #bfbfbf;
+  border-left: 1px solid #3679da;
   transition: transform 0.3s ease;
   text-align: left;
   overflow-y: auto;
   overflow-x: hidden;
 }
 
-.portal .menu-fld {
+.portal-drawer .menu-fld {
+  background-color: #3679da;
   cursor: pointer;
   padding: 10px 10px;
   font-size: 15px;
   font-weight: 500;
   font-family: 'Noto Sans KR';
-  /* border: 1px solid #bfbfbf; */
   box-sizing: border-box;
   width: 300px;
-  border-bottom: 1px solid #d9d9d9;
+  border-bottom: 1px solid #3679da;
+  color: #fff;
 }
 
-.portal .menu-fld img{
+.portal-drawer .menu-fld img{
   margin-right: 3px;
+  -webkit-filter: brightness(0) invert(1); 
+  filter: brightness(0) invert(1);
 }
 
-.portal .menu-fld::after {
+.portal-drawer .menu-fld::after {
   content: '';
   float: right;
   position: relative;
@@ -37,51 +40,53 @@
   width: 12px;
   right: 25px;
   top: 7px;
-  opacity: 0.3;
+  /* opacity: 0.3; */
+  -webkit-filter: brightness(0) invert(1); 
+  filter: brightness(0) invert(1);
   background: url('../img/select_ico.png') no-repeat;
   background-position: center;
 }
 
-.portal .is-open .menu-fld::after {
+.portal-drawer .is-open .menu-fld::after {
   transform: rotate(180deg);
 }
 
-.portal .menu-report {
+.portal-drawer .menu-report {
   cursor: pointer;
   padding: 7px 30px;
   font-size: 14px;
   font-weight: 500;
   font-family: 'Noto Sans KR';
   border-bottom: 1px solid #d9d9d9;
-  background: #f5f5f5;
+  background: #f8f8fa;
   box-sizing: border-box;
   display: block;
   width: 300px;
 }
 
 .menu-report:hover {
-  background-color: #efefef;
+  background-color: #dfe6f2;
 }
 
 /* .menu-report:last-child {
   border-bottom: none;
 } */
 
-.portal .drawer.open {
+.portal-drawer .drawer.open {
   transform: translateX(0);
   transition: transform 0.3s ease;
 }
 
-.portal .drawer ul {
+.portal-drawer .drawer ul {
   padding-left: 20px;
   list-style: none;
 }
 
-.portal .drawer ul li {
+.portal-drawer .drawer ul li {
   padding: 10px 0;
 }
 
-.portal .backdrop {
+.portal-drawer .backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -91,6 +96,19 @@
   z-index: 1; /* Drawer보다 낮게 */
 }
 
-.portal .drawer {
-  z-index: 2; /* backdrop보다 높게 */
+.portal-drawer .drawer {
+  display: flex;
+  flex-direction: column;
+  z-index: 51; /* backdrop보다 높게 */
+}
+
+.drawer-reports {
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.drawer-quick-menu {
+  border-top: 1px solid #3679da;
+  display: none;
 }
