--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -102,6 +102,12 @@
   color: #666666;
   padding: 4px 0;
   font-weight: bold;
+  cursor: pointer;
+}
+
+.portal #header_menu > li .depth_menu ul li a:hover {
+  text-decoration: underline;
+  color: #3679da;
 }
 
 .portal #header_menu > li .depth_menu ul li a.active span {
