--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -376,7 +376,7 @@
 }
 
 .portal .blue_bg {
-  background-color: #e5e9f2;
+  background-color: #f3f4f8;
   padding: 65px 0;
 }
 
@@ -519,6 +519,11 @@
   text-align: left;
   border-bottom: 2px solid #000;
   padding-bottom: 4px;
+}
+
+
+.portal .pay_box_wrap .dx-texteditor.dx-editor-outlined {
+  border: none !important;
 }
 
 @media (max-width:1900px) {
