hotfix: portal 수정사항 적용
- 메뉴 디자인 수정
- 메뉴 하위 폴더에 있는 보고서까지 불러오게 수정
- 홈앤쇼핑 팔레트 추가
- 슬라이스 버튼 클릭시 autoplay 멈춤

--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -96,10 +96,10 @@
 
 .portal #header_menu > li .depth_menu ul li a {
   display: block;
-  text-align: center;
+  text-align: left;
   font-size: 14px;
   color: #666666;
-  padding: 4px 0;
+  padding: 4px 20px;
   font-weight: bold;
   cursor: pointer;
 }
@@ -252,7 +252,7 @@
 }
 
 .portal .pay_box > div:first-child {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 .portal .pay_box > div:last-child {
