hotfix: 최근 보고서 2405 폴더 제외, 기준년월일 오늘 표시 추가, 기준년월일 요일 추가,

--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -794,3 +794,9 @@
 .swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
   bottom: -4px !important;
 }
+
+.dx-calendar-cell.dx-calendar-today span {
+  border: 1px solid #337ab7;
+  border-radius: 100%;
+  color: #337ab7;
+}
