--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -36,6 +36,11 @@
   box-shadow: inset 0 0 0 1px #3679da
 }
 
+#header_menu>li>a.active:hover{
+  border: 1px solid #D80028 !important;
+  box-shadow: inset 0 0 0 1px #D80028
+}
+
 .portal #header_menu > li > a {
   display: inline-block;
   text-align: center;
@@ -119,9 +124,9 @@
 }
 
 .portal #header_menu > li > a.active {
-  background-color: #3679da;
+  background-color: #D80028;
   color: #fff;
-  border-color: #3679da;
+  border-color: #D80028;
 }
 
 .portal .menu_btn {
