--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -220,21 +220,54 @@
 
 .portal .pay_box_wrap li select {
   cursor: pointer;
-  font-size: 16px;
   appearance: none;
   -webkit-appearance: none;
   background-image: url('../img/select_ico.png');
   background-position: 90% 18px;
   background-repeat: no-repeat;
   padding-right: 25px;
+  color: var(--red);
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.portal .pay_box_wrap li + li {
+  margin-top: 15px;
 }
 
 .portal .pay_box_wrap li select option {
+  font-weight: bold;
   cursor: pointer;
 }
 
 .portal .pay_box_wrap li select option[value=""] {
   color: #999999;
+}
+
+.portal .pay_box_button_wrap {
+  display:flex;
+  flex-direction: row;
+}
+
+.portal .pay_box_button {
+  border: 0;
+  border-radius: 50px;
+  background-color: #dddee6;
+  text-align: center;
+  width: 100%;
+  height: 45px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 13px 10px;
+}
+
+.portal .pay_box_button.active {
+  outline: 2px solid black;
+}
+
+.pay_box_button + .pay_box_button{
+  margin-left: 10px;
 }
 
 .portal .pay_box .pay_title {
@@ -561,7 +594,7 @@
     font-size: 20px;
   }
 
-  .portal .pay_box_wrap li input {
+  .portal .pay_box_wrap li input, .pay_box_button {
     font-size: 18px;
   }
 
