--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -179,8 +179,7 @@
   width: 250px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 25px 0;
+  justify-content: center;
 }
 
 .portal .pay_box_wrap .pay_box {
@@ -189,6 +188,9 @@
   border-radius: 20px;
   padding: 35px 25px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .portal .pay_box_wrap .pay_box:nth-of-type(1), .portal .pay_box_wrap .pay_box:nth-of-type(2) {
@@ -322,10 +324,6 @@
 
 .portal .pay_box > div:first-child {
   margin-bottom: 0px;
-}
-
-.portal .pay_box > div:last-child {
-  align-items: start;
 }
 
 .portal .pay_box .percent_box p {
