--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -192,12 +192,12 @@
   flex-direction: column;
   justify-content: space-between;
 }
-
+/* 
 .portal .pay_box_wrap .pay_box:nth-of-type(1), .portal .pay_box_wrap .pay_box:nth-of-type(2) {
   background: white;
-}
+} */
 
-.portal .pay_box_wrap .pay_box:nth-of-type(1)::before {
+/* .portal .pay_box_wrap .pay_box:nth-of-type(1)::before {
   content: '';
   width: 100%;
   height: 100%;
@@ -221,7 +221,7 @@
   mix-blend-mode: multiply;
   pointer-events: none;
   border-radius: 20px;
-}
+} */
 
 .portal .pay_box_wrap li p {
   font-weight: bold;
@@ -814,9 +814,18 @@
   }
 }
 
-#portal_user_info {
+.portal_right_menu {
   position: absolute;
-  right: 30px;
+  right: 30px; 
+  display: flex;
+  align-items: center;
+}
+
+.portal_right_menu h3{
+  padding-right: 20px;
+}
+
+#portal_user_info {
   background: none;
 }
 
