hotfix: 메인화면설정 페이징 제거, css 개선, 관리자 뷰어 admin일 경우에만 들어갈 수 있게 수정

--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -592,6 +592,12 @@
   border: none !important;
 }
 
+@media (max-width: 1250px) {
+  .portal #header_menu li a:not(.active) {
+    display: none;
+  }
+}
+
 @media (max-width:1900px) {
   .portal .header_wrap {
     padding: 35px 20px;
