perf: 뷰어 전체 다운로드 UI 개선 및 셀 병합 다운로드 추가

--- a/src/main/view/src/dx.css
+++ b/src/main/view/src/dx.css
@@ -543,3 +543,12 @@ td[role="columnheader"] {
 .dx-popup-content .dx-list-item-selected .dx-list-item-content {
   font-weight: bold;
 }
+
+/*popover css*/
+#viewerDownloadPopover .dx-popup-content {
+  padding: 3px;
+}
+
+.itemDownloadPopover .dx-popup-content {
+  padding: 0 10px 15px 10px;
+}
