--- a/src/main/view/src/portal/css/style.css
+++ b/src/main/view/src/portal/css/style.css
@@ -31,6 +31,10 @@
   margin-left: 70px;
 }
 
+.portal .admin_viewer {
+  margin-left: 30px !important;
+}
+
 #header_menu>li>a:hover{
   border: 1px solid #3679da !important;
   box-shadow: inset 0 0 0 1px #3679da
